[package]
name = "aleka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
hex = "0.4.3"
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"